--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^4.1.1
+  smooth_page_indicator: ^1.0.0+2
   dots_indicator: ^2.1.0
 
 
