--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   carousel_slider: ^4.1.1
   smooth_page_indicator: ^1.0.0+2
   dots_indicator: ^2.1.0
+  google_fonts: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
